# Pochan

./: .gitignore  GITHUB_REPO_INFO.md  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddAnimeDialog.css  AddAnimeDialog.tsx  AnimeDetailModal.css  AnimeDetailModal.tsx  Bubble.tsx  BubbleCanvas.css  BubbleCanvas.tsx  Sidebar.css  Sidebar.tsx  Toast.css  Toast.tsx  Tutorial.css  Tutorial.tsx  bubble.css
src/hooks/: useReducedMotion.ts
src/lib/: bangumi.ts  eventBus.ts  history.ts  notification.ts  physics.ts  staleness.ts  storage.ts  theme.ts  updater.ts  windowEffects.ts
src/lib/__tests__/: storage.integration.test.ts
src/store/: useAnimeStore.ts
src/styles/: global.css
src/test/: setup.ts
src/types/: history.ts  index.ts
src/views/: BubbleView.css  BubbleView.tsx  CalendarView.css  CalendarView.tsx  LibraryView.css  LibraryView.tsx  SettingsView.css  SettingsView.tsx  StatsView.css  StatsView.tsx
